cmake_minimum_required(VERSION 3.25)

add_subdirectory(unit)
add_subdirectory(functional)
add_subdirectory(integration)
add_subdirectory(communication)
# Overhead tests use x86 SSE2 (emmintrin) and RDTSC; skip on non-x86 (e.g. aarch64)
if(CMAKE_SYSTEM_PROCESSOR MATCHES "x86_64|AMD64|i[356]86")
  add_subdirectory(overhead)
else()
  message(STATUS "Skipping test/overhead (requires x86: emmintrin.h, RDTSC)")
endif()
